--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -206,3 +206,13 @@ html, body {
 .mdl-demo .mdl-menu__container {
     z-index: 99;
 }
+
+#view-source {
+    position: fixed;
+    display: block;
+    right: 0;
+    bottom: 0;
+    margin-right: 40px;
+    margin-bottom: 40px;
+    z-index: 900;
+}
