--- a/app/views/common/headerNav.html
+++ b/app/views/common/headerNav.html
@@ -12,7 +12,8 @@
         <a href="#features" class="mdl-layout__tab">Details</a>
         <a href="#features" class="mdl-layout__tab">Technology</a>
         <a href="#features" class="mdl-layout__tab">FAQ</a>
-        <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-shadow--4dp mdl-color--accent" id="add">
+        <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-shadow--4dp mdl-color--accent"
+                id="add">
             <i class="material-icons" role="presentation">add</i>
             <span class="visuallyhidden">Add</span>
         </button>
