--- a/app/views/technology.html
+++ b/app/views/technology.html
@@ -2,7 +2,10 @@
     <div class="mdl-card mdl-cell mdl-cell--12-col">
         <div class="mdl-card__supporting-text">
             <h4>Technology</h4>
-            Dolore ex deserunt aute fugiat aute nulla ea sunt aliqua nisi cupidatat eu. Nostrud in laboris labore nisi amet do dolor eu fugiat consectetur elit cillum esse. Pariatur occaecat nisi laboris tempor laboris eiusmod qui id Lorem esse commodo in. Exercitation aute dolore deserunt culpa consequat elit labore incididunt elit anim.
+            Dolore ex deserunt aute fugiat aute nulla ea sunt aliqua nisi cupidatat eu. Nostrud in laboris labore nisi
+            amet do dolor eu fugiat consectetur elit cillum esse. Pariatur occaecat nisi laboris tempor laboris eiusmod
+            qui id Lorem esse commodo in. Exercitation aute dolore deserunt culpa consequat elit labore incididunt elit
+            anim.
         </div>
         <div class="mdl-card__actions">
             <a href="#" class="mdl-button">Read our features</a>
