--- a/app/views/features.html
+++ b/app/views/features.html
@@ -1,7 +1,7 @@
 <div class="mdl-layout__tab-panel" id="features">
     <section class="section--center mdl-grid mdl-grid--no-spacing">
         <div class="mdl-cell mdl-cell--12-col">
-            <h4>Features</h4>
+            <h4>{{view | capitalize}}</h4>
             Minim duis incididunt est cillum est ex occaecat consectetur. Qui sint ut et qui nisi cupidatat.
             Reprehenderit nostrud proident officia exercitation anim et pariatur ex.
             <ul class="toc">
